ApexAcademy/force-app/main/default/objects/Lead/fields/Product_Has_Extended_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Has_Extended_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product_Has_Extended_Warranty</label>
    <type>Checkbox</type>
</CustomField>