ApexAcademy/force-app/main/default/objects/Lead/fields/Product_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Date__c</fullName>
    <label>Product_Purchase_Date</label>
    <type>Date</type>
</CustomField>