ApexAcademy/force-app/main/default/objects/Lead/fields/Product_Total_Warranty_Days__c.field-meta.xml
<CustomField>
    <fullName>Product_Total_Warranty_Days__c</fullName>
    <label>Product_Total_Warranty_Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>